<resources>
    <string name="app_name">Blood Donation App</string>
    <string name="urgently_required">Urgently Required</string>
    <string name="request_message">Message about this request</string>
    <string name="post_request">Post Request</string>
    <string-array name="blood_groups">
        <item>@string/O_neg</item>
        <item>@string/O_pos</item>
        <item>@string/A_neg</item>
        <item>@string/A_pos</item>
        <item>@string/B_neg</item>
        <item>@string/B_pos</item>
        <item>@string/AB_neg</item>
        <item>@string/AB_pos</item>
    </string-array>

    <string name="O_neg" />
    <string name="O_pos" />
    <string name="A_neg" />
    <string name="A_pos" />
    <string name="B_neg" />
    <string name="B_pos" />
    <string name="AB_neg" />
    <string name="AB_pos" />
    <string name="blood_group">Blood Group:</string>
    <string name="location_name">Location Name</string>
    <string name="urgent">Urgent</string>
    <string name="login_or_signup">Login or Signup</string>
    <string name="logo">App Logo image</string>
    <string name="please_provide_info">Please provide this info</string>
    <string name="donor_name">Donor Name</string>
    <string name="speak_the_message">Speak the Message</string>
    <string name="get_directions">Get Directions</string>

    //API keys
    <string name="google_maps_directions_api_key">AIzaSyAio9A2PY4l_nTdIGvjneNH4pipT3jAyDM</string>

    //ADMOB AppID
    <string name="ADMOB_APP_ID">ca-app-pub-8061925392530760~7181828243</string>

    //ADMOB UnitId for mainActivity bottom ad
    <string name="TEST_AD_UNITID">ca-app-pub-3940256099942544/6300978111</string>

    <!--<string name="TEST_AD_UNITID">ca-app-pub-8061925392530760/1897711976</string>-->

    <!--<string name="AD_UNITID_MAINACTIVITY_BOTTOM">ca-app-pub-8061925392530760/1897711976</string>-->

    <string name="DEVICE_ID">3BBF596B4999C0B3DF95A6B45ED1AD66</string>
    <string name="manage_posted_requests">Manage Posted Requests</string>
    <string name="make_donation_request">Make Donation Request</string>


    //invites strings
    <string name="invite">Send invitations!</string>
    <string name="welcome">Invites</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>

    <string name="invitation_title">Send Blood Donation App Invite</string>
    <string name="invitation_message">Install this Blood Donation App and donate blood to save lives!</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">https://developers.google.com/identity/images/g-logo.png</string>
    <string name="invitation_cta">Install!</string>

    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>

    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>

    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="feedback">Give Feedback</string>
    <string name="logout">Logout</string>
    <string name="backup">Backup</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="proceed">Proceed</string>
    <string name="subject">Subject</string>

    <string name="bad_config">Bad GA Tracking ID</string>


    //facebook
    <string name="facebook_app_id">160517254645543</string>

</resources>
